--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@400;600&display=swap");
+
+:root {
+  --primary-dark-clr: hsl(257, 40%, 49%);
+  --primary-light-clr: hsl(300, 69%, 71%);
+  --neutral-clr: white;
+
+  --font-size-1: 3.5rem;
+  --font-size-2: 1.6rem;
+
+  --font-heading: "Poppins", sans-serif;
+  --font-body: "Open Sans", sans-serif;
+}
+
 /* RESET */
 *,
 *::after,
@@ -5,11 +19,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid red;
 }
 
 a {
   text-decoration: none;
+}
+
+li {
+  list-style-type: none;
 }
 
 html {
@@ -17,10 +34,133 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 img {
   max-width: 100%;
   display: block;
+}
+
+/* ELEMENTOS PRINCIPAIS */
+body {
+  background-color: var(--primary-dark-clr);
+  background-image: url(images/bg-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.container {
+  margin-inline: auto;
+  max-width: 1200px;
+  padding: 2rem;
+}
+
+.btn {
+  padding: 1em 5em;
+  display: inline-block;
+  border-radius: 2em;
+  box-shadow: 1px 7px 10px 1px rgba(0, 0, 0, 0.31);
+}
+
+.btn-primary {
+  background-color: var(--neutral-clr);
+  color: var(--primary-dark-clr);
+  font-weight: 600;
+  font-size: var(--font-size-2);
+  font-family: var(--font-body);
+  transition: all 0.5s ease;
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-light-clr);
+  color: var(--neutral-clr);
+}
+
+header {
+  margin-bottom: 4rem;
+}
+
+.logo {
+  max-width: 15rem;
+}
+
+.hero {
+  display: grid;
+  grid-gap: 4rem;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.hero h1 {
+  font-family: var(--font-heading);
+  color: var(--neutral-clr);
+  font-size: var(--font-size-1);
+  margin-bottom: 2rem;
+}
+
+.hero p {
+  font-family: var(--font-body);
+  color: var(--neutral-clr);
+  font-size: var(--font-size-2);
+  margin-bottom: 2rem;
+  line-height: 1.5;
+}
+
+footer {
+  text-align: center;
+}
+
+.social-links {
+  --width-height: 2em;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.social-links a {
+  display: grid;
+  place-items: center;
+  width: var(--width-height);
+  height: var(--width-height);
+  border-radius: 50%;
+  border: 1px solid var(--neutral-clr);
+  color: var(--neutral-clr);
+  transition: all 0.5s ease;
+  font-size: var(--font-size-2);
+}
+
+.social-links a:hover {
+  color: var(--primary-light-clr);
+  border: 1px solid var(--primary-light-clr);
+}
+
+/* DESKTOP */
+@media (min-width: 768px) {
+  body {
+    background-image: url(images/bg-desktop.svg);
+    background-size: cover;
+    display: grid;
+  }
+
+  header {
+    width: 100%;
+    place-self: start;
+  }
+
+  .hero {
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    text-align: left;
+    margin-bottom: 0;
+  }
+
+  footer {
+    width: 100%;
+    place-self: end;
+  }
+
+  .social-links {
+    justify-content: flex-end;
+  }
 }
